--- a/package.json
+++ b/package.json
@@ -9,14 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.4.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.13.0",
+    "axios": "^1.6.8",
+    "bcryptjs": "^2.4.3",
+    "currency-formatter": "^1.5.9",
+    "date-fns": "^3.6.0",
+    "mongoose": "^8.3.3",
+    "next": "14.2.3",
+    "next-auth": "^4.24.7",
+    "prisma": "^5.13.0",
     "react": "^18",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-hook-form": "^7.51.4",
+    "react-hot-toast": "^2.4.1",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.1.0",
+    "react-loader-spinner": "^6.1.6",
+    "react-query": "^3.39.3",
+    "react-spinners": "^0.13.8",
+    "swiper": "^11.1.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "dotenv": "^16.4.5",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
